# online-cinema-fast-api

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose-tests.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  lint.yml
docker/mailhog/: Dockerfile
docker/tests/: Dockerfile
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: auth.js  cart.js  client.js  interactions.js  movies.js  orders.js  payments.js
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/components/movies/: MovieCard.jsx
frontend/src/components/ui/: Pagination.jsx  ProtectedRoute.jsx  Spinner.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Activate.jsx  Admin.jsx  Cart.jsx  Home.jsx  Login.jsx  MovieDetail.jsx  Notifications.jsx  Orders.jsx  PaymentCancel.jsx  PaymentSuccess.jsx  Profile.jsx  Register.jsx
migrations/: env.py
migrations/versions/: 0186a23db577_initial.py  0e5a6fd0d166_add_users_and_user_groups_tables.py  107382c0adca_initial_schema.py  19da0d7c2e67_complete_user_auth_flow.py  39b87c583e61_remove_email_status_and_is_email_.py  4754ed592b37_initial_migration.py  644b4281bd2a_add_cart_orders_interactions_auth.py  6bfa6bcff650_initial.py  74fea5cb3a32_seed_user_groups.py  754fbdbfbd8d_initial_migrations.py  7cc720648947_add_payment_and_paymentitem_tables.py  990c03e9f94e_create_movie_tables.py  c798e5e30757_add_email_verification_fields.py  cd49c9df4aae_add_payment_and_paymentitem_tables.py  e64b545a0e6c_paymentintent.py  e87655fda4ee_add_interactions_tables.py
src/: main.py
src/auth/: dependencies.py  models.py  router.py  schemas.py  security.py  validators.py
src/cart/: crud.py  exceptions.py  models.py  routers.py  schemas.py
src/core/: celery_app.py  config.py  database.py  s3.py  seed_db.py  utils.py
src/interactions/: models.py  repository.py  router.py  schemas.py
src/movies/: crud.py  models.py  routers.py  schemas.py
src/movies/routers/: genres_router.py  movies_router.py  stars_router.py
src/notifications/: email.py
src/notifications/services/: sendgrid_webhook.py  telegram.py
src/notifications/templates/: telegram_messages.py
src/orders/: crud.py  exceptions.py  models.py  routers.py  schemas.py
src/payments/: crud.py  exceptions.py  models.py  routers.py  schemas.py  utils.py
src/tasks/: __init__.py  auth.py  email.py
src/tests/: conftest.py  test_auth.py  test_boost.py  test_business_logic.py  test_cart.py  test_extra_cases.py  test_health.py  test_mega_boost.py  test_movies.py  test_notifications.py  test_payments.py  test_user_model.py
