[project]
name = "online-cinema-fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Ostap Shp",email = "stark171705@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)"
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

