[project]
name = "online-cinema-fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Ostap Shp",email = "stark171705@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4)",
    "python-multipart (>=0.0.22)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "stripe (>=14.3.0,<15.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "poetry-core (>=2.0.0)",
    "asyncpg (>=0.31.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "greenlet (>=3.3.1,<4.0.0)",
    "sendgrid (>=6.12.5,<7.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "aiosqlite (>=0.22.1)",
    "boto3",
    "bcrypt (==4.0.1)",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
[tool.poetry]
package-mode = false

[tool.ruff.lint.per-file-ignores]
"migrations/env.py" = ["F401"]
"*/models.py" = ["F821"]
